--- a/books-detail/detail.css
+++ b/books-detail/detail.css
@@ -4,3 +4,11 @@
     width: 60px;
     height: 60px;
 }
+
+.detail-title{
+    font-size:clamp(2rem, 5vw, 4rem);
+    color: #ffffff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    letter-spacing: 2px;
+
+}
