--- a/books-detail/detail.css
+++ b/books-detail/detail.css
@@ -12,3 +12,14 @@
     letter-spacing: 2px;
 
 }
+
+.book-details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.detail-img{
+    
+    width: 400px;
+}
